--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 
 .container{
     background: url("https://i0.wp.com/www.arthenos.com/wp-content/uploads/2019/05/135mm_F11_Soft_LEE.jpg?ssl=1");
-    background-size: %100 %100;
+    background-size:auto;
     height: 100vh;
     
 }
 
 .container .navbar{
     width: 100%;
-    height: 80px;
+    height: 100px;
     background-color: coral;
 }
 
@@ -24,9 +24,9 @@
 }
 
 .navbar .logo{
-    display: inline-block;
-    margin-left: 50px;
-    margin-top: 30px;
+    display:inline-block;
+    margin-left: 100px;
+    margin-top: 40px;
 }
 
 .navbar .logo a{
@@ -35,6 +35,8 @@
     font-size: medium;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
 
 .navbar ul li{
     list-style: none;
@@ -55,3 +57,89 @@
 .navbar ul li a:hover{
     background-color:gray ;
 }
+
+.container .textbody h1{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 50px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin-top: 250px;
+}
+.container .textbody h2{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 50px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin-top: 250px;
+}
+
+.navbar .image {
+    margin-left: 10px;
+    margin-top: -45px;
+}
+.navbar .image img {
+    border: 1px solid #ddd;
+    border-radius: 10%;
+    padding: 0px;
+    width: 70px;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+/*  When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+ /* Add a background color and some padding around the form */
+  .containerr {
+    border-radius: 5px;
+    background-color: brown;
+    padding: 20px;
+  }
+
+  /* Style all font awesome icons 
+.fa {
+    padding: 20px;
+    font-size: 0px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect if you want 
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand 
+  
+  /* Facebook 
+  .fa-linkedin{
+    background:#45a049
+    color: white;
+  }
+  
+ 
